# telnyx-milvus

ci/scripts/: build.sh
core/: CMakeLists.txt  build.sh
core/cmake/: DefineOptions.cmake  ThirdPartyPackages.cmake
core/scripts/: start_server.sh
core/src/: CMakeLists.txt
core/src/index/: CMakeLists.txt  build.sh
core/src/index/cmake/: FindHIPToolkit.cmake  ThirdPartyPackagesCore.cmake
core/src/index/knowhere/: CMakeLists.txt
core/src/index/knowhere/knowhere/index/vector_index/: VecIndexFactory.cpp
core/src/index/knowhere/knowhere/index/vector_index/adapter/: SptagAdapter.cpp
core/src/index/knowhere/knowhere/index/vector_index/gpu/: IndexGPUIDMAP.cpp
core/src/index/unittest/: CMakeLists.txt
core/src/index/unittest/faiss_benchmark/: CMakeLists.txt
core/src/index/unittest/faiss_ori/: CMakeLists.txt
core/src/metrics/: SystemInfo.cpp
core/src/scheduler/: Utils.cpp
core/src/server/init/: GpuChecker.cpp  GpuChecker.h
core/src/utils/: ValidationUtil.cpp
core/unittest/: CMakeLists.txt
core/unittest/server/: CMakeLists.txt
core/unittest/storage/: CMakeLists.txt
